[package]
name = "rudis-server"
version = "0.2.1"
authors = ["就眠儀式"]
edition = "2021"

[dependencies]            
bytes = "1.3.0"
regex = "1.5.4"
anyhow = "1.0.59"
env_logger = "0.8"
dashmap = "5.4"
bincode = "2.0.0-rc.3"
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
indicatif = "0.15.0"
log = "0.4"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
redis = "1.0.1"